Add ComponentInfo for CBC Gem

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -450,6 +450,7 @@
 	<item component="ComponentInfo{ca.blood.giveblood/ca.blood.giveblood.SplashActivity}" drawable="give_blood" />
 	<item component="ComponentInfo{ca.bnc.android/ca.bnc.android.MainActivity}" drawable="nbc" />
 	<item component="ComponentInfo{ca.cbc.android.cbctv/com.lacronicus.cbcapplication.SplashActivity}" drawable="cbc_gem" />
+	<item component="ComponentInfo{ca.cbc.android.cbctv/tv.tou.android.splash.views.activities.SplashScreenActivity}" drawable="cbc_gem" />
 	<item component="ComponentInfo{ca.cbc.mobile.android.cbcnewsandroidwebview/ca.cbc.android.news.refresh.ui.SplashActivity}" drawable="cbc_news" />
 	<item component="ComponentInfo{ca.cbc.mobile.android.cbcnewsandroidwebview/ca.cbc.android.news.ui.SplashActivity}" drawable="cbc_news" />
 	<item component="ComponentInfo{ca.chancehorizon.paseo/ca.chancehorizon.paseo.MainActivity}" drawable="paseo" />
