Add alt icon for CBC Gem

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -72,6 +72,7 @@
 	<item drawable="camera_mx_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="catcode_alt_1" />
+	<item drawable="cbc_gem_alt_1" />
 	<item drawable="chrome_alt_1" />
 	<item drawable="chrome_alt_2" />
 	<item drawable="chrome_canary_alt_1" />
