--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9298,6 +9298,9 @@
 	<item component="ComponentInfo{io.github.yamin8000.dooz/io.github.yamin8000.dooz.content.MainActivity}" drawable="dooz" />
 	<item component="ComponentInfo{io.github.yamin8000.owl/io.github.yamin8000.owl.content.MainActivity}" drawable="owl" />
 	<item component="ComponentInfo{io.github.zyrouge.symphony/io.github.zyrouge.symphony.MainActivity}" drawable="symphony_player" />
+	<item component="ComponentInfo{io.gosnappy.coco/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
+	<item component="ComponentInfo{io.gosnappy.cococalgary/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
+	<item component="ComponentInfo{io.gosnappy.cocovancouver/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
 	<item component="ComponentInfo{io.heckel.ntfy/io.heckel.ntfy.ui.MainActivity}" drawable="ntfy" />
 	<item component="ComponentInfo{io.hellocode.javvy/md5f48fe3905df5b9b0509d5bb1143ce871.MainActivity}" drawable="javvy" />
 	<item component="ComponentInfo{io.homeassistant.companion.android.minimal/io.homeassistant.companion.android.launch.LaunchActivity}" drawable="home_assistant" />
