--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2723,6 +2723,7 @@
 	<item drawable="cmc_invest" />
 	<item drawable="cnn" />
 	<item drawable="co_star" />
+	<item drawable="coco_tea" />
 	<item drawable="cod_companion" />
 	<item drawable="coda" />
 	<item drawable="codashop" />
