Add alt icon for CoCo Tea

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -85,6 +85,7 @@
 	<item drawable="cloudstream_alt_1" />
 	<item drawable="cloudstream_beta_alt_1" />
 	<item drawable="clue_alt_1" />
+	<item drawable="coco_tea_alt_1" />
 	<item drawable="coinbase_alt_1" />
 	<item drawable="coinbase_pro_alt_1" />
 	<item drawable="color_switch_alt_1" />
