Add Duke of Ed ORB

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9768,6 +9768,7 @@
 	<item component="ComponentInfo{net.foneweb.secure.lockit/net.foneweb.secure.lockit.MainActivity}" drawable="vpn" />
 	<item component="ComponentInfo{net.frju.flym/net.frju.flym.ui.main.MainActivity}" drawable="flym" />
 	<item component="ComponentInfo{org.decsync.flym/org.decsync.flym.ui.main.MainActivity}" drawable="flym_decsync" />
+	<item component="ComponentInfo{org.dofe.dofeparticipant/org.dofe.dofeparticipant.activity.ParticipantActivity}" drawable="duke_of_ed_orb" />
 	<item component="ComponentInfo{net.froemling.bombsquad/net.froemling.bombsquad.BombSquad}" drawable="bomb_squad" />
 	<item component="ComponentInfo{net.froemling.bombsquad/net.froemling.bombsquad.MainActivity}" drawable="bomb_squad" />
 	<item component="ComponentInfo{net.fusio.meteireann/net.fusio.meteireann.SplashActivity}" drawable="weather" />
