--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -3197,6 +3197,7 @@
 	<item drawable="duckstation" />
 	<item drawable="duden" />
 	<item drawable="duet" />
+	<item drawable="duke_of_ed_orb" />
 	<item drawable="dumb_ways" />
 	<item drawable="dune" />
 	<item drawable="dungeon_crawl_stone_soup" />
