Put new icons in New category
oops I forgot to do this in earlier commits

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,10 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="cbc_gem_alt_1" />
+	<item drawable="coco_tea" />
+	<item drawable="coco_tea_alt_1" />
+	<item drawable="duke_of_ed_orb" />
 
 	<category title="Alts" />
 	<item drawable="_4pda_alt_1" />
