--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1432,6 +1432,7 @@
 	<item component="ComponentInfo{com.avuscapital.trading212lib/com.avuscapital.trading212lib.modules.prelogin.WelcomeActivity}" drawable="trading_two_one_two" />
 	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.ui.MusicPlayerActivity}" drawable="nyx" />
 	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.ui.SplashScreenActivity}" drawable="nyx" />
+	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.activities.SplashScreenActivity}" drawable="nyx" />
 	<item component="ComponentInfo{com.awesomedroid.bigfont/com.awesomedroid.app.feature.splash.SplashActivity}" drawable="big_font" />
 	<item component="ComponentInfo{com.awp.stashaway/com.stashawayapp.MainActivity}" drawable="stashaway" />
 	<item component="ComponentInfo{com.aws.android/com.aws.android.app.ui.HomeActivity}" drawable="weatherbug" />
