Add 4 icons, fix 1 icon (#632)
* Add ComponentInfo for CBC Gem

* Add alt icon for CBC Gem

* Add CoCo Tea

* Add alt icon for CoCo Tea

* Add Duke of Ed ORB

* Put new icons in New category

oops I forgot to do this in earlier commits

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,10 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="cbc_gem_alt_1" />
+	<item drawable="coco_tea" />
+	<item drawable="coco_tea_alt_1" />
+	<item drawable="duke_of_ed_orb" />
 
 	<category title="Alts" />
 	<item drawable="_4pda_alt_1" />
@@ -72,6 +76,7 @@
 	<item drawable="camera_mx_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="catcode_alt_1" />
+	<item drawable="cbc_gem_alt_1" />
 	<item drawable="chrome_alt_1" />
 	<item drawable="chrome_alt_2" />
 	<item drawable="chrome_canary_alt_1" />
@@ -84,6 +89,7 @@
 	<item drawable="cloudstream_alt_1" />
 	<item drawable="cloudstream_beta_alt_1" />
 	<item drawable="clue_alt_1" />
+	<item drawable="coco_tea_alt_1" />
 	<item drawable="coinbase_alt_1" />
 	<item drawable="coinbase_pro_alt_1" />
 	<item drawable="color_switch_alt_1" />
@@ -2722,6 +2728,7 @@
 	<item drawable="cmc_invest" />
 	<item drawable="cnn" />
 	<item drawable="co_star" />
+	<item drawable="coco_tea" />
 	<item drawable="cod_companion" />
 	<item drawable="coda" />
 	<item drawable="codashop" />
@@ -3194,6 +3201,7 @@
 	<item drawable="duckstation" />
 	<item drawable="duden" />
 	<item drawable="duet" />
+	<item drawable="duke_of_ed_orb" />
 	<item drawable="dumb_ways" />
 	<item drawable="dune" />
 	<item drawable="dungeon_crawl_stone_soup" />
