--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -450,6 +450,7 @@
 	<item component="ComponentInfo{ca.blood.giveblood/ca.blood.giveblood.SplashActivity}" drawable="give_blood" />
 	<item component="ComponentInfo{ca.bnc.android/ca.bnc.android.MainActivity}" drawable="nbc" />
 	<item component="ComponentInfo{ca.cbc.android.cbctv/com.lacronicus.cbcapplication.SplashActivity}" drawable="cbc_gem" />
+	<item component="ComponentInfo{ca.cbc.android.cbctv/tv.tou.android.splash.views.activities.SplashScreenActivity}" drawable="cbc_gem" />
 	<item component="ComponentInfo{ca.cbc.mobile.android.cbcnewsandroidwebview/ca.cbc.android.news.refresh.ui.SplashActivity}" drawable="cbc_news" />
 	<item component="ComponentInfo{ca.cbc.mobile.android.cbcnewsandroidwebview/ca.cbc.android.news.ui.SplashActivity}" drawable="cbc_news" />
 	<item component="ComponentInfo{ca.chancehorizon.paseo/ca.chancehorizon.paseo.MainActivity}" drawable="paseo" />
@@ -9297,6 +9298,9 @@
 	<item component="ComponentInfo{io.github.yamin8000.dooz/io.github.yamin8000.dooz.content.MainActivity}" drawable="dooz" />
 	<item component="ComponentInfo{io.github.yamin8000.owl/io.github.yamin8000.owl.content.MainActivity}" drawable="owl" />
 	<item component="ComponentInfo{io.github.zyrouge.symphony/io.github.zyrouge.symphony.MainActivity}" drawable="symphony_player" />
+	<item component="ComponentInfo{io.gosnappy.coco/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
+	<item component="ComponentInfo{io.gosnappy.cococalgary/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
+	<item component="ComponentInfo{io.gosnappy.cocovancouver/io.gosnappy.snappy.client.main.activity.splash.SplashActivity}" drawable="coco_tea" />
 	<item component="ComponentInfo{io.heckel.ntfy/io.heckel.ntfy.ui.MainActivity}" drawable="ntfy" />
 	<item component="ComponentInfo{io.hellocode.javvy/md5f48fe3905df5b9b0509d5bb1143ce871.MainActivity}" drawable="javvy" />
 	<item component="ComponentInfo{io.homeassistant.companion.android.minimal/io.homeassistant.companion.android.launch.LaunchActivity}" drawable="home_assistant" />
@@ -9764,6 +9768,7 @@
 	<item component="ComponentInfo{net.foneweb.secure.lockit/net.foneweb.secure.lockit.MainActivity}" drawable="vpn" />
 	<item component="ComponentInfo{net.frju.flym/net.frju.flym.ui.main.MainActivity}" drawable="flym" />
 	<item component="ComponentInfo{org.decsync.flym/org.decsync.flym.ui.main.MainActivity}" drawable="flym_decsync" />
+	<item component="ComponentInfo{org.dofe.dofeparticipant/org.dofe.dofeparticipant.activity.ParticipantActivity}" drawable="duke_of_ed_orb" />
 	<item component="ComponentInfo{net.froemling.bombsquad/net.froemling.bombsquad.BombSquad}" drawable="bomb_squad" />
 	<item component="ComponentInfo{net.froemling.bombsquad/net.froemling.bombsquad.MainActivity}" drawable="bomb_squad" />
 	<item component="ComponentInfo{net.fusio.meteireann/net.fusio.meteireann.SplashActivity}" drawable="weather" />
