fix Unitto icon and move the old one to alt

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -776,6 +776,7 @@
 	<item drawable="twitter_lite_alt_2" />
 	<item drawable="udemy_alt_1" />
 	<item drawable="unified_remote_alt_1" />
+	<item drawable="unitto_alt_1" />
 	<item drawable="up_banking_alt_1" />
 	<item drawable="vanced_manager_alt_1" />
 	<item drawable="vanced_microg_settings_alt_1" />
@@ -7743,7 +7744,6 @@
 	<item drawable="unit_pro" />
 	<item drawable="united_airlines" />
 	<item drawable="united_we_stream_berlin" />
-	<item drawable="unitto" />
 	<item drawable="unity_remote" />
 	<item drawable="universal_copy" />
 	<item drawable="university_of_michigan" />
