--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1433,6 +1433,7 @@
 	<item component="ComponentInfo{com.avuscapital.trading212lib/com.avuscapital.trading212lib.modules.prelogin.WelcomeActivity}" drawable="trading_two_one_two" />
 	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.ui.MusicPlayerActivity}" drawable="nyx" />
 	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.ui.SplashScreenActivity}" drawable="nyx" />
+	<item component="ComponentInfo{com.awedea.nyx/com.awedea.nyx.activities.SplashScreenActivity}" drawable="nyx" />
 	<item component="ComponentInfo{com.awesomedroid.bigfont/com.awesomedroid.app.feature.splash.SplashActivity}" drawable="big_font" />
 	<item component="ComponentInfo{com.awp.stashaway/com.stashawayapp.MainActivity}" drawable="stashaway" />
 	<item component="ComponentInfo{com.aws.android/com.aws.android.app.ui.HomeActivity}" drawable="weatherbug" />
@@ -6347,6 +6348,7 @@
 	<item component="ComponentInfo{com.shell.sitibv.retail/com.mobgen.fireblade.presentation.splash.SplashActivity}" drawable="shell" />
 	<item component="ComponentInfo{com.shervinkoushan.anyTracker/com.shervinkoushan.anyTracker.MainActivity}" drawable="anytracker" />
 	<item component="ComponentInfo{com.shervinkoushan.anyTracker/com.shervinkoushan.anyTracker.ui.help.StartupActivity}" drawable="anytracker" />
+	<item component="ComponentInfo{com.shervinkoushan.anyTracker/com.shervinkoushan.anyTracker.core.presentation.help.StartupActivity}" drawable="anytracker" />
 	<item component="ComponentInfo{com.shiftreset.actual/com.actual.MainActivity}" drawable="actual" />
 	<item component="ComponentInfo{com.shinycore.picsayfree/com.shinycore.picsayfree.main}" drawable="picsay" />
 	<item component="ComponentInfo{com.shinycore.picsaypro/com.shinycore.picsaypro.main}" drawable="picsay" />
