add missing icons, sort appfilter, rename some icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -87,6 +87,7 @@
 	<item drawable="supertux_classic" />
 	<item drawable="talabat" />
 	<item drawable="tapet_wallpapers" />
+	<item drawable="tapet_wallpapers_alt_2" />
 	<item drawable="temu" />
 	<item drawable="to_the_moon" />
 	<item drawable="tripcom" />
@@ -817,6 +818,8 @@
 	<item drawable="tachiyomi_j2k_alt_1" />
 	<item drawable="takeaway_alt_1" />
 	<item drawable="taobao_alt_1" />
+	<item drawable="tapet_wallpapers_alt_1" />
+	<item drawable="tapet_wallpapers_alt_2" />
 	<item drawable="taskito_alt_1" />
 	<item drawable="telegram_alt_1" />
 	<item drawable="texpand_alt_1" />
@@ -1419,6 +1422,7 @@
 	<item drawable="google_photos" />
 	<item drawable="google_photoscan" />
 	<item drawable="google_pixel_buds" />
+	<item drawable="google_pixel_watch" />
 	<item drawable="google_play_books" />
 	<item drawable="google_play_developer_console" />
 	<item drawable="google_play_games" />
@@ -4007,7 +4011,6 @@
 	<item drawable="goodable" />
 	<item drawable="goodreads" />
 	<item drawable="goodtime_productivity" />
-	<item drawable="google_pixel_watch" />
 	<item drawable="goosechase" />
 	<item drawable="gopro" />
 	<item drawable="gospel_library" />
@@ -7474,7 +7477,6 @@
 	<item drawable="tap_titans_2" />
 	<item drawable="tapas" />
 	<item drawable="tapatalk" />
-	<item drawable="tapet" />
 	<item drawable="tapet_wallpapers" />
 	<item drawable="tappytoon" />
 	<item drawable="taptap" />
