--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -100,6 +100,7 @@
 	<item drawable="xenowerk" />
 	<item drawable="yoodo" />
 	<item drawable="ytdlnis" />
+	<item drawable="app_manager" />
 
 	<category title="Alts" />
 	<item drawable="_4pda_alt_1" />
@@ -131,6 +132,7 @@
 	<item drawable="app_drawer_alt_7" />
 	<item drawable="app_drawer_alt_8" />
 	<item drawable="app_drawer_alt_9" />
+	<item drawable="app_manager_alt_1" />
 	<item drawable="appbar_alt_1" />
 	<item drawable="apple_music_alt_1" />
 	<item drawable="ark_alt_1" />
