--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -63,7 +63,8 @@
 	<item drawable="gdevelop" />
 	<item drawable="ghost_commander" />
 	<item drawable="gittouch" />
-	<item drawable="google_authenticator_alt_1" />
+	<item drawable="google_arts_and_culture" />
+	<item drawable="google_authenticator" />
 	<item drawable="gradeway" />
 	<item drawable="heymelody" />
 	<item drawable="hook_2" />
