--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -65,6 +65,7 @@
 	<item drawable="gittouch" />
 	<item drawable="google_arts_and_culture" />
 	<item drawable="google_authenticator" />
+	<item drawable="google_fi_wireless" />
 	<item drawable="gradeway" />
 	<item drawable="heymelody" />
 	<item drawable="hook_2" />
@@ -296,6 +297,7 @@
 	<item drawable="google_docs_alt_1" />
 	<item drawable="google_drive_alt_1" />
 	<item drawable="google_fit_alt_1" />
+	<item drawable="google_fi_wireless_alt_1" />
 	<item drawable="google_mail_alt_1" />
 	<item drawable="google_maps_alt_1" />
 	<item drawable="google_meet_alt_1" />
@@ -1440,6 +1442,7 @@
 	<item drawable="google_family_link_kids" />
 	<item drawable="google_family_link_parents" />
 	<item drawable="google_files" />
+	<item drawable="google_fi_wireless" />
 	<item drawable="google_fit" />
 	<item drawable="google_gallery_go" />
 	<item drawable="google_go" />
@@ -1484,7 +1487,6 @@
 	<item drawable="google_playbook" />
 	<item drawable="google_plus" />
 	<item drawable="google_podcasts" />
-	<item drawable="google_project_fi" />
 	<item drawable="google_recorder" />
 	<item drawable="google_sheets" />
 	<item drawable="google_slides" />
