--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -107,6 +107,7 @@
 	<item drawable="qibla_compass" />
 	<item drawable="race_the_sun" />
 	<item drawable="rain" />
+	<item drawable="reading_mode" />
 	<item drawable="retry" />
 	<item drawable="rsdkv5" />
 	<item drawable="samsung_deco_pic" />
@@ -1508,6 +1509,7 @@
 	<item drawable="grasshopper" />
 	<item drawable="material_gallery" />
 	<item drawable="musicfx" />
+	<item drawable="reading_mode" />
 	<item drawable="santa_tracker" />
 	<item drawable="sim_toolkit" />
 	<item drawable="snapseed" />
