--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11822,4 +11822,5 @@
 	<item component="ComponentInfo{com.chinykian.aslightchanceofsawblades/com.chinykian.aslightchanceofsawblades.RunnerActivity}" drawable="a_slight_chance_of_sawblades" />
 	<item component="ComponentInfo{com.gabrielecirulli.app2048/com.gabrielecirulli.app2048.MainActivity}" drawable="_2048" />
 	<item component="ComponentInfo{app.galleryx/app.galleryx.activity.MainActivity}" drawable="_1gallery" />
+	<item component="ComponentInfo{com.google.android.accessibility.reader/com.google.android.accessibility.reader.settings.ReaderActivity}" drawable="reading_mode" />
 </resources>
