--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -73,6 +73,7 @@
 	<item drawable="inbank" />
 	<item drawable="indigo" />
 	<item drawable="inkblot" />
+	<item drawable="inoreader" />
 	<item drawable="jami" />
 	<item drawable="klepon" />
 	<item drawable="klepon_wheel" />
