add Sam Beckman to contributors.xml (the prank went too far)

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -21,6 +21,11 @@
         image="https://icon-icons.com/downloadimage.php?id=170689&amp;root=2699/PNG/128/&amp;file=svgrepo_logo_icon_170689.png"
         link="https://svgrepo.com" />
     <contributor
+        name="Sam Beckman"
+        contribution="Involuntary Promoter"
+        image="https://yt3.googleusercontent.com/ytc/AGIKgqPvzyPHxVX_GLTVengDqPt1_J7M-pHuszLaKyp1mQ=s176-c-k-c0x00ffffff-no-rj"
+        link="https://www.youtube.com/@sambeckman" />
+    <contributor
         name="Adam G. Emerson"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/35545129"
