add missing entries in drawable.xml

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -295,11 +295,12 @@
 	<item drawable="github_alt_1" />
 	<item drawable="glitch_lab_alt_1" />
 	<item drawable="google_allo_alt_1" />
+	<item drawable="google_arts_and_culture_alt_1" />
 	<item drawable="google_authenticator_alt_1" />
 	<item drawable="google_docs_alt_1" />
 	<item drawable="google_drive_alt_1" />
-	<item drawable="google_fit_alt_1" />
 	<item drawable="google_fi_wireless_alt_1" />
+	<item drawable="google_fit_alt_1" />
 	<item drawable="google_mail_alt_1" />
 	<item drawable="google_maps_alt_1" />
 	<item drawable="google_meet_alt_1" />
@@ -323,6 +324,7 @@
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
 	<item drawable="infinity_alt_1" />
+	<item drawable="inoreader_alt_1" />
 	<item drawable="inshot_alt_1" />
 	<item drawable="insight_physics" />
 	<item drawable="instacart_alt_1" />
@@ -1443,8 +1445,8 @@
 	<item drawable="google_express" />
 	<item drawable="google_family_link_kids" />
 	<item drawable="google_family_link_parents" />
-	<item drawable="google_files" />
 	<item drawable="google_fi_wireless" />
+	<item drawable="google_files" />
 	<item drawable="google_fit" />
 	<item drawable="google_gallery_go" />
 	<item drawable="google_go" />
