--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="ecosia" />
+	<item drawable="inbrowser" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -118,6 +120,7 @@
 	<item drawable="duckduckgo_green" />
 	<item drawable="duckduckgo_purple" />
 	<item drawable="duckduckgo_silhouette" />
+	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="elements_kwgt_alt_1" />
 	<item drawable="exodus_alt_1" />
@@ -179,6 +182,7 @@
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
+	<item drawable="inbrowser_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
 	<item drawable="infinity_alt_1" />
 	<item drawable="inoreader_alt_1" />
