--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10084,6 +10084,7 @@
 	<item component="ComponentInfo{maa.pixelwavewallpapers/maa.pixelwavewallpapers.Activities.SplashScreen}" drawable="wallsplash" />
 	<item component="ComponentInfo{maa.vaporwave_editor_glitch_vhs_trippy/maa.vaporwave_editor_glitch_vhs_trippy.ui.activities.essential.SplashScreen}" drawable="vaporgram" />
 	<item component="ComponentInfo{maa.vaporwave_editor_glitch_vhs_trippy/maa.vaporwave_editor_glitch_vhs_trippy.ui.activities.SplashScreen}" drawable="vaporgram" />
+	<item component="ComponentInfo{maa.vaporwave_editor_glitch_vhs_trippy/maa.vaporwave_editor_glitch_vhs_trippy.ui.activities.SplashScreenActivity}" drawable="vaporgram" />
 	<item component="ComponentInfo{maa.vaporwave_wallpaper/maa.vaporwave_wallpaper.Utils.SplashScreen}" drawable="wallsplash" />
 	<item component="ComponentInfo{mango9.com.sleepybox/mango9.com.sleepybox.MainActivity}" drawable="sleepy_box" />
 	<item component="ComponentInfo{mark.via.gp/mark.via.Shell}" drawable="via_browser" />
@@ -10475,6 +10476,7 @@
 	<item component="ComponentInfo{notizen.bloc.notes.notas.notepad.notatnik.note/notizen.bloc.notes.notas.notepad.notatnik.note.main.SplashActivity}" drawable="quickmemo" />
 	<item component="ComponentInfo{notizen.pastel.notes.notas.notepad.notatnik.note/notizen.pastel.notes.notas.notepad.notatnik.note.main.SplashActivity}" drawable="quickmemo" />
 	<item component="ComponentInfo{nu.tommie.inbrowser/nu.tommie.inbrowser.lib.Inbrowser}" drawable="inbrowser" />
+	<item component="ComponentInfo{nu.tommie.inbrowser/com.privateinternetaccess.main.splash.SplashActivity}" drawable="inbrowser" />
 	<item component="ComponentInfo{nya.kitsunyan.foxydroid/nya.kitsunyan.foxydroid.MainActivity}" drawable="foxy_droid" />
 	<item component="ComponentInfo{nz.co.anz.android.mobilebanking/nz.co.anz.android.mobilebanking.ui.core.ui.CoreActivity}" drawable="bank" />
 	<item component="ComponentInfo{nz.co.asb.asbmobile/nz.co.asb.mobile.SplashActivity}" drawable="bank" />
