--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -126,10 +126,10 @@
         image="https://d33wubrfki0l68.cloudfront.net/737813d0bb8f3ec708dd1b47057aa3a37b6ad008/e0adb/images/self-portrait.jpg"
         link="https://grabster.tv" />
     <contributor
-        name="tealeee"
+        name="eeelbrens"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/130598002"
-        link="https://github.com/tealeee" /> 
+        link="https://github.com/eeelbrens" /> 
     <contributor
         name="Jaebirds"
         contribution="Icons"
