--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,7 @@
 	<category title="New" />
 	<item drawable="ecosia" />
 	<item drawable="inbrowser" />
+	<item drawable="symphony_player" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -727,6 +728,7 @@
 	<item drawable="subtitle_viewer_alt_1" />
 	<item drawable="summoners_companion_alt_1" />
 	<item drawable="swift_backup_alt_1" />
+	<item drawable="symphony_player_alt_1" />
 	<item drawable="sync_alt_1" />
 	<item drawable="sync_fancy" />
 	<item drawable="sync_legacy" />
