--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,7 @@
 	<category title="New" />
 	<item drawable="ecosia" />
 	<item drawable="inbrowser" />
+	<item drawable="obsidian" />
 	<item drawable="symphony_player" />
 	<item drawable="spotube" />
 
@@ -297,6 +298,7 @@
 	<item drawable="omnicard_alt_1" />
 	<item drawable="ooni_probe_alt_1" />
 	<item drawable="openboard_alt_1" />
+	<item drawable="obsidian_alt_1" />
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
