Add new ScoreSquash icon

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9,6 +9,7 @@
 	<item drawable="obsidian" />
 	<item drawable="symphony_player" />
 	<item drawable="spotube" />
+	<item drawable="scoresquash />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -825,6 +826,7 @@
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
 	<item drawable="zello_alt_1" />
+	<item drawable="scoresquash_alt_1" />
 
 	<category title="Calendar" />
 	<item drawable="calendar" />
