--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11409,7 +11409,7 @@
 	<item component="ComponentInfo{sanity.podcast.freak/sanity.podcast.freak.activities.MenuActivity}" drawable="podcast_go" />
 	<item component="ComponentInfo{sarsa.minmax.resiconpack/sarsa.minmax.resiconpack.activities.SplashActivity}" drawable="resicon_flat" />
 	<item component="ComponentInfo{sarsamurmu.resiconpack.adaptive/sarsamurmu.resiconpack.adaptive.activities.SplashActivity}" drawable="resicon_adaptive" />
-	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash" />
+	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash_alt_1" />
 	<item component="ComponentInfo{se.avanzabank.androidapplikation/se.avanzabank.androidapplikation.home.activity.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{se.bankgirot.swish/se.bankgirot.swish.ui.SplashActivity}" drawable="swish" />
 	<item component="ComponentInfo{se.burgerking.ordersapp/se.burgerking.ordersapp.MainActivity}" drawable="burger_king" />
@@ -11847,4 +11847,5 @@
 	<item component="ComponentInfo{com.ttxapps.drivesync/com.ttxapps.sync.app.MainActivity}" drawable="autosync_google_drive" />
 	<item component="ComponentInfo{app.author.today.authortoday/app.author.today.start.presentation.view.StartActivity}" drawable="author_today" />
 	<item component="ComponentInfo{com.jgeek00.adguard_home_manager/com.jgeek00.adguard_home_manager.MainActivity}" drawable="adguard_home_manager" />
+	<item component="ComponentInfo{scoresquash.ik/com.sportshq.SplashActivity}" drawable="scoresquash" />
 </resources>
