--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11819,7 +11819,7 @@
 	<item component="ComponentInfo{com.caribou.caribouapp/com.caribou.caribouapp.MainActivity}" drawable="caribou_coffee" />
 	<item component="ComponentInfo{com.ie.capitalone.uk/capitalone.com.comobileapp.startup.defaultIcon}" drawable="capital_one_uk" />
 	<item component="ComponentInfo{com.houseoflife.bitlord/org.proninyaroslav.libretorrent.ui.main.MainActivity}" drawable="bitlord" />
-	<item component="ComponentInfo{com.chiller3.bcr/com.chiller3.bcr.SettingsActivity}" drawable="basic_call_recorder" />
+	<item component="ComponentInfo{com.chiller3.bcr/com.chiller3.bcr.settings.SettingsActivity}" drawable="basic_call_recorder" />
 	<item component="ComponentInfo{ru.avtoto.app/ru.avtoto.app.ui.splash.SplashScreenActivity}" drawable="avtoto" />
 	<item component="ComponentInfo{com.adobe.analyticsdashboards/com.adobe.analyticsdashboards.MainActivity}" drawable="adobe_analytics" />
 	<item component="ComponentInfo{com.chinykian.aslightchanceofsawblades/com.chinykian.aslightchanceofsawblades.RunnerActivity}" drawable="a_slight_chance_of_sawblades" />
