--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11871,4 +11871,5 @@
 	<item component="ComponentInfo{io.github.teccheck.fastlyrics/io.github.teccheck.fastlyrics.MainActivity}" drawable="fastlyrics" />
 	<item component="ComponentInfo{com.consultantplus.app/com.consultantplus.app.home.HomeActivity}" drawable="consultantplus" />
 	<item component="ComponentInfo{com.simondalvai.ball2box/com.godot.game.GodotApp}" drawable="ball2box" />
+	<item component="ComponentInfo{com.axiel7.moelist/com.axiel7.moelist.uicompose.MainActivity}" drawable="moelist" />
 </resources>
