--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -26,6 +26,7 @@
 	<item drawable="tunedetective" />
 	<item drawable="yggdrasil" />
 	<item drawable="zhishi" />
+	<item drawable="moelist" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -276,6 +277,7 @@
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
+	<item drawable="moelist_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
