2 new icons, 1 updated

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -27,6 +27,7 @@
 	<item drawable="yggdrasil" />
 	<item drawable="zhishi" />
 	<item drawable="moelist" />
+	<item drawable="jerboa_for_lemmy" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -214,6 +215,7 @@
 	<item drawable="instagram_alt_1" />
 	<item drawable="instagram_alt_2" />
 	<item drawable="j2me_loader_alt_1" />
+	<item drawable="jerboa_for_lemmy_alt_1" />
 	<item drawable="joox_alt_1" />
 	<item drawable="joplin_alt_1" />
 	<item drawable="junior_hockey_league_alt_1" />
