update revanced icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -28,6 +28,9 @@
 	<item drawable="zhishi" />
 	<item drawable="moelist" />
 	<item drawable="jerboa_for_lemmy" />
+	<item drawable="revanced_manager" />
+	<item drawable="youtube_music_revanced" />
+	<item drawable="youtube_revanced" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -372,6 +375,7 @@
 	<item drawable="reddit_alt_2" />
 	<item drawable="reddit_alt_4" />
 	<item drawable="retro_music_player_alt_1" />
+	<item drawable="revanced_manager_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
 	<item drawable="robinhood_alt_1" />
 	<item drawable="runtastic_alt_1" />
@@ -839,8 +843,10 @@
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
+	<item drawable="youtube_music_revanced_alt_1" />
 	<item drawable="youtube_music_vanced_alt_1" />
 	<item drawable="youtube_revanced_alt_1" />
+	<item drawable="youtube_revanced_alt_2" />
 	<item drawable="youtube_studio_alt_1" />
 	<item drawable="youtube_vanced_alt_1" />
 	<item drawable="youtube_vanced_alt_2" />
