--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11872,4 +11872,5 @@
 	<item component="ComponentInfo{com.consultantplus.app/com.consultantplus.app.home.HomeActivity}" drawable="consultantplus" />
 	<item component="ComponentInfo{com.simondalvai.ball2box/com.godot.game.GodotApp}" drawable="ball2box" />
 	<item component="ComponentInfo{com.axiel7.moelist/com.axiel7.moelist.uicompose.MainActivity}" drawable="moelist" />
+	<item component="ComponentInfo{it.atm.appmobile/it.atm.appmobile.MainActivity}" drawable="atm_milano" />
 </resources>
