--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -31,6 +31,8 @@
 	<item drawable="revanced_manager" />
 	<item drawable="youtube_music_revanced" />
 	<item drawable="youtube_revanced" />
+	<item drawable="atm_milano" />
+	<item drawable="tunedetective" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -74,6 +76,7 @@
 	<item drawable="artstation_alt_2" />
 	<item drawable="asana_alt_1" />
 	<item drawable="atmosphere_alt_1" />
+	<item drawable="atm_milano_alt_1" />
 	<item drawable="audacy_alt_1" />
 	<item drawable="aurora_droid_alt_1" />
 	<item drawable="auxio_alt_1" />
@@ -810,6 +813,7 @@
 	<item drawable="trivia_you_alt_1" />
 	<item drawable="truist_alt_1" />
 	<item drawable="trust_alt_1" />
+	<item drawable="tunedetective_alt_1" />
 	<item drawable="tunein_radio_alt_1" />
 	<item drawable="tunity_alt_1" />
 	<item drawable="turbo_dismount_alt_1" />
