13 new icons (5 updated), 2 new compinfos

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -82,6 +82,11 @@
 	<item drawable="youtube_revanced" />
 	<item drawable="zhishi" />
 	<item drawable="zip" />
+	<item drawable="tinkoff" />
+	<item drawable="tinkoff_invest" />
+	<item drawable="tinkoff_junior" />
+	<item drawable="tinkoff_mobile" />
+	<item drawable="google_fiber" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -832,6 +837,10 @@
 	<item drawable="tiktok_alt_2" />
 	<item drawable="tim_hortons_alt_1" />
 	<item drawable="tinkoff_alt_1" />
+	<item drawable="tinkoff_alt_2" />
+	<item drawable="tinkoff_invest_alt_1" />
+	<item drawable="tinkoff_junior_alt_1" />
+	<item drawable="tinkoff_mobile_alt_1" />
 	<item drawable="tiny_weather_forecast_germany_alt_1" />
 	<item drawable="todoist_amethyst" />
 	<item drawable="todoist_blueberry" />
@@ -907,6 +916,7 @@
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
 	<item drawable="zello_alt_1" />
+	<item drawable="whoosh_sharing_alt_1" />
 
 	<category title="Calendar" />
 	<item drawable="calendar" />
@@ -1396,6 +1406,7 @@
 	<item drawable="google_family_link_kids" />
 	<item drawable="google_family_link_parents" />
 	<item drawable="google_fi_wireless" />
+	<item drawable="google_fiber" />
 	<item drawable="google_files" />
 	<item drawable="google_fit" />
 	<item drawable="google_gallery_go" />
@@ -7753,12 +7764,8 @@
 	<item drawable="tinder_lite" />
 	<item drawable="tinfoil_for_facebook" />
 	<item drawable="ting" />
-	<item drawable="tinkoff" />
-	<item drawable="tinkoff_invest" />
 	<item drawable="tinkoff_invest_course" />
 	<item drawable="tinkoff_journal" />
-	<item drawable="tinkoff_junior" />
-	<item drawable="tinkoff_mobile" />
 	<item drawable="tiny_music_player" />
 	<item drawable="tiny_tiny_rss" />
 	<item drawable="tiny_weather" />
@@ -8362,7 +8369,6 @@
 	<item drawable="whisker" />
 	<item drawable="whisper" />
 	<item drawable="whoosh_parking" />
-	<item drawable="whoosh_sharing" />
 	<item drawable="whos_call" />
 	<item drawable="wible" />
 	<item drawable="wick_editor" />
