--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6074,7 +6074,7 @@
 	<item component="ComponentInfo{com.pubg.krmobile/com.epicgames.ue4.SplashActivity}" drawable="pubg" />
 	<item component="ComponentInfo{com.pubg.newstate/com.epicgames.ue4.SplashActivity}" drawable="pubg_new_state" />
 	<item component="ComponentInfo{com.pumapumatrac/com.pumapumatrac.ui.splash.SplashActivity}" drawable="pumatrac" />
-	<item component="ComponentInfo{com.punicapp.whoosh/com.punicapp.whoosh.activities.SplashActivity}" drawable="whoosh_sharing" />
+	<item component="ComponentInfo{com.punicapp.whoosh/com.punicapp.whoosh.activities.SplashActivity}" drawable="whoosh_sharing_alt_1" />
 	<item component="ComponentInfo{com.pure.indosat.care/com.pure.indosat.care.activities.SplashActivity}" drawable="myim3" />
 	<item component="ComponentInfo{com.puregym/crc641d6d804f6b816bf7.SplashActivity}" drawable="workout" />
 	<item component="ComponentInfo{com.purplecover.anylist/com.purplecover.anylist.ui.LaunchActivity}" drawable="anylist" />
@@ -11827,7 +11827,7 @@
 	<item component="ComponentInfo{app.galleryx/app.galleryx.activity.MainActivity}" drawable="_1gallery" />
 	<item component="ComponentInfo{com.google.android.accessibility.reader/com.google.android.accessibility.reader.settings.ReaderActivity}" drawable="reading_mode" />
 	<item component="ComponentInfo{code.aquaria.wordbook/code.aquaria.wordbook.wordbook.MainActivity}" drawable="wordbook" />
-	<item component="ComponentInfo{com.punicapp.whoosh/com.punicapp.whoosh.activities.ClientSplashActivity}" drawable="whoosh_sharing" />
+	<item component="ComponentInfo{com.punicapp.whoosh/com.punicapp.whoosh.activities.ClientSplashActivity}" drawable="whoosh_sharing_alt_1" />
 	<item component="ComponentInfo{com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity}" drawable="weather" />
 	<item component="ComponentInfo{com.privoce.vocechatclient/com.privoce.vocechatclient.MainActivity}" drawable="vocechat" />
 	<item component="ComponentInfo{com.virginaustralia.vaapp/com.virginaustralia.vaapp.SplashScreenActivity}" drawable="virgin_australia" />
@@ -11927,4 +11927,5 @@
 	<item component="ComponentInfo{com.evertec.athmovil.android/com.evertec.athmovil.android.SplashScreen}" drawable="ath_movil" />
 	<item component="ComponentInfo{com.donnnno.arcticons.you/com.donnnno.arcticons.activities.SplashActivity}" drawable="arcticons_you" />
 	<item component="ComponentInfo{com.sparkine.muvizedge/com.sparkine.muvizedge.activity.HomeActivity}" drawable="always_on" />
+	<item component="ComponentInfo{com.google.android.apps.fiber.myfiber/com.google.android.apps.fiber.myfiber.navigation.ui.NavigationActivity}" drawable="google_fiber" />
 </resources>
