--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11992,4 +11992,5 @@
 	<item component="ComponentInfo{uk.co.adventuregamestudio.agsplayer/uk.co.adventuregamestudio.agsplayer.MainActivity}" drawable="adventure_game_studio" />
 	<item component="ComponentInfo{com.actionlauncher.adaptiveiconpack/com.actionlauncher.adaptiveiconpack.ui.EntryActivity}" drawable="adaptivepack" />
 	<item component="ComponentInfo{uk.co.nickbutcher.adaptiveiconplayground/uk.co.nickbutcher.adaptiveiconplayground.MainActivity}" drawable="adaptive_icon_playground" />
+	<item component="ComponentInfo{com.zionhuang.music/com.zionhuang.music.MainActivity}" drawable="innertune" />
 </resources>
