--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="innertune" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -185,6 +186,7 @@
 	<item drawable="inbrowser_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
 	<item drawable="infinity_alt_1" />
+	<item drawable="innertune_alt_1" />
 	<item drawable="inoreader_alt_1" />
 	<item drawable="inshot_alt_1" />
 	<item drawable="insight_physics" />
