Fix Flightradar24 icon link

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12036,4 +12036,5 @@
 	<item component="ComponentInfo{com.ameriprise.AmeripriseFinancial/com.ameriprise.ameriprisefinancial.ui.common.SplashActivity}" drawable="ameriprise_financial" />
 	<item component="ComponentInfo{ro.altex.mobile/ro.altex.mobile.MainActivity}" drawable="altex" />
 	<item component="ComponentInfo{com.agoradesk.app/io.flutter.embedding.android.FlutterFragmentActivity}" drawable="agoradesk" />
+	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity}" drawable="flightradar" />
 </resources>
