--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12037,4 +12037,5 @@
 	<item component="ComponentInfo{ro.altex.mobile/ro.altex.mobile.MainActivity}" drawable="altex" />
 	<item component="ComponentInfo{com.agoradesk.app/io.flutter.embedding.android.FlutterFragmentActivity}" drawable="agoradesk" />
 	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity}" drawable="flightradar" />
+	<item component="ComponentInfo{com.bnyro.contacts/com.bnyro.contacts.ui.activities.MainActivity}" drawable="connect_you" />
 </resources>
