--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -40,6 +40,11 @@
 	<item drawable="yearly_progress" />
 	<item drawable="you_tune" />
 	<item drawable="zassest_booker" />
+	<item drawable="clock_you" />
+	<item drawable="connect_you" />
+	<item drawable="record_you" />
+	<item drawable="translate_you" />
+	<item drawable="wall_you" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -124,6 +129,7 @@
 	<item drawable="clicker_heroes_alt_1" />
 	<item drawable="clickup_alt_1" />
 	<item drawable="clock_alt_1" />
+	<item drawable="clock_you_alt_1" />
 	<item drawable="cloudstream_alt_1" />
 	<item drawable="cloudstream_beta_alt_1" />
 	<item drawable="clue_alt_1" />
@@ -132,6 +138,7 @@
 	<item drawable="coinbase_pro_alt_1" />
 	<item drawable="color_switch_alt_1" />
 	<item drawable="comdirect_alt_1" />
+	<item drawable="connect_you_alt_1" />
 	<item drawable="contacts_alt_1" />
 	<item drawable="contacts_alt_2" />
 	<item drawable="contacts_alt_3" />
@@ -383,6 +390,7 @@
 	<item drawable="quoda_alt_1" />
 	<item drawable="raindrop_alt_1" />
 	<item drawable="rankey_alt_1" />
+	<item drawable="record_you_alt_1" />
 	<item drawable="reddit_alt_1" />
 	<item drawable="reddit_alt_2" />
 	<item drawable="reddit_alt_4" />
@@ -822,6 +830,7 @@
 	<item drawable="todoist_sunflower" />
 	<item drawable="todoist_tangerine" />
 	<item drawable="tower_of_fantasy_alt_1" />
+	<item drawable="translate_you_alt_1" />
 	<item drawable="transmission_remote_alt_1" />
 	<item drawable="triplinx_alt_1" />
 	<item drawable="trivia_crack_alt_1" />
@@ -849,6 +858,7 @@
 	<item drawable="vkontakte_alt_1" />
 	<item drawable="vpn_alt_1" />
 	<item drawable="waking_up_alt_1" />
+	<item drawable="wall_you_alt_1" />
 	<item drawable="walli_alt_1" />
 	<item drawable="wawa_alt_1" />
 	<item drawable="waze_alt_1" />
