--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -15,6 +15,8 @@
 	<item drawable="canary_mail" />
 	<item drawable="codeassist" />
 	<item drawable="dirol_reader" />
+	<item drawable="dhikr_and_dua" />
+	<item drawable="dua_and_azkar" />
 	<item drawable="easter_eggs" />
 	<item drawable="gvb" />
 	<item drawable="highway_radar" />
@@ -31,6 +33,7 @@
 	<item drawable="octogram" />
 	<item drawable="photo_editor_foss" />
 	<item drawable="red_cross" />
+	<item drawable="samsung_galaxy_apps" />
 	<item drawable="star_realms" />
 	<item drawable="starline" />
 	<item drawable="tempo" />
@@ -402,6 +405,7 @@
 	<item drawable="russian_e_government_alt_1" />
 	<item drawable="sagernet_alt_1" />
 	<item drawable="samsung_ar_zone_alt_1" />
+	<item drawable="samsung_galaxy_apps_alt_1" />
 	<item drawable="samsung_galaxy_themes_alt_1" />
 	<item drawable="samsung_good_lock_alt_1" />
 	<item drawable="samsung_notes_alt_1" />
@@ -3218,6 +3222,7 @@
 	<item drawable="devs_base" />
 	<item drawable="dfndr_security" />
 	<item drawable="dhgate" />
+	<item drawable="dhikr_and_dua" />
 	<item drawable="dhl" />
 	<item drawable="diablo_immortal" />
 	<item drawable="diaguard" />
@@ -3383,6 +3388,7 @@
 	<item drawable="dsub" />
 	<item drawable="du_recorder" />
 	<item drawable="du_updater" />
+	<item drawable="dua_and_azkar" />
 	<item drawable="dubsmash" />
 	<item drawable="duck_the_line" />
 	<item drawable="duckduckgo" />
