--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -867,6 +867,7 @@
 	<item component="ComponentInfo{com.alibaba.intl.android.apps.poseidon/com.alibaba.intl.android.apps.poseidon.app.activity.ActivityMainMaterial}" drawable="alibaba" />
 	<item component="ComponentInfo{com.alicloud.databox/com.alicloud.databox.launcher.splash.SplashActivity}" drawable="aliyun_drive" />
 	<item component="ComponentInfo{com.Alienforcegames.ChessFusionFree/com.unity3d.player.UnityPlayerActivity}" drawable="chess" />
+	<item component="ComponentInfo{com.alifewithallah.app/com.ryanheise.audioservice.AudioServiceActivity}" drawable="dhikr_and_dua" />
 	<item component="ComponentInfo{com.alightcreative.motion/com.alightcreative.app.motion.activities.main.MainActivity}" drawable="alight_motion" />
 	<item component="ComponentInfo{com.alightcreative.motion/com.alightcreative.app.motion.activities.ProjectListActivity}" drawable="alight_motion" />
 	<item component="ComponentInfo{com.aliucord.installer/com.aliucord.installer.MainActivity}" drawable="aliucord_installer" />
@@ -4771,6 +4772,7 @@
 	<item component="ComponentInfo{com.lovense.wear/com.wear.main.FlashActivity}" drawable="lovense_remote" />
 	<item component="ComponentInfo{com.loves.finder/com.loves.lovesconnect.splash_screen.SplashActivity}" drawable="loves_connect" />
 	<item component="ComponentInfo{com.lowes.android/com.lowes.android.controller.util.OnboardingActivity}" drawable="lowes" />
+	<item component="ComponentInfo{com.ls.arabic/com.ls.arabic.MainActivity}" drawable="dua_and_azkar" />
 	<item component="ComponentInfo{com.lsdroid.cerberus.client/com.lsdroid.cerberus.client.StartActivity}" drawable="cerberus" />
 	<item component="ComponentInfo{com.lsdroid.cerberus/com.lsdroid.cerberus.StartActivity}" drawable="cerberus" />
 	<item component="ComponentInfo{com.ltgames.elona/com.ltgames.android.javascript.AppActivity}" drawable="elona_mobile" />
